src/objects/Project_Zone_Group_SOSP__c.object
<CustomObject>
    <fields>
        <fullName>Project__c</fullName>
        <label>Project</label>
        <referenceTo>Project_SOSP__c</referenceTo>
        <relationshipLabel>Project Zone Groups</relationshipLabel>
        <relationshipName>Project_Zone_Groups</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Zone_Group_Coordinator__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Zone Group Coordinator</description>
        <label>Zone Group Coordinator</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Project_Zone_Groups</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Zone_Group__c</fullName>
        <label>Region</label>
        <referenceTo>Zone_Group_SOSP__c</referenceTo>
        <relationshipLabel>Project Zone Groups</relationshipLabel>
        <relationshipName>Project_Zone_Groups</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <label>Project Zone Group</label>
    <nameField>
        <displayFormat>PZG-{0000}</displayFormat>
        <label>Project Zone Group ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Project Zone Groups</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>